test/interp/spec/memory.txt
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/memory.wast
(;; STDOUT ;;;
assert_invalid error:
  third_party/testsuite/memory.wast:12:12: max pages (0) must be >= initial pages (1)
  (module (memory 1 0))
           ^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:16:24: segment ends past the end of initial memory size (0)
  (module (memory 0 0 (segment 0 "a")))
                       ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:20:40: address (98304) greater than initial memory size (65536)
  (module (memory 1 2 (segment 0 "a") (segment 98304 "b")))
                                       ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:24:42: address (0) less than end of previous segment (3)
  (module (memory 1 2 (segment 0 "abc") (segment 0 "def")))
                                         ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:28:41: address (0) less than end of previous segment (5)
  (module (memory 1 2 (segment 3 "ab") (segment 0 "de")))
                                        ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:32:56: address (1) less than end of previous segment (3)
  (module (memory 1 2 (segment 0 "a") (segment 2 "b") (segment 1 "c")))
                                                       ^^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:36:12: max pages (65536) must be <= (65535)
  (module (memory 0 65536))
           ^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:40:12: max pages (2147483648) must be <= (65535)
  (module (memory 0 2147483648))
           ^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:44:12: max pages (4294967296) must be <= (65535)
  (module (memory 0 4294967296))
           ^^^^^^
assert_invalid error:
  third_party/testsuite/memory.wast:55:28: alignment must be power-of-two
  (module (memory 0) (func (i64.load align=0 (i32.const 0))))
                           ^
assert_invalid error:
  third_party/testsuite/memory.wast:59:28: alignment must be power-of-two
  (module (memory 0) (func (i64.load align=3 (i32.const 0))))
                           ^
assert_invalid error:
  third_party/testsuite/memory.wast:63:28: alignment must be power-of-two
  (module (memory 0) (func (i64.load align=5 (i32.const 0))))
                           ^
assert_invalid error:
  third_party/testsuite/memory.wast:67:28: alignment must be power-of-two
  (module (memory 0) (func (i64.load align=6 (i32.const 0))))
                           ^
assert_invalid error:
  third_party/testsuite/memory.wast:71:28: alignment must be power-of-two
  (module (memory 0) (func (i64.load align=7 (i32.const 0))))
                           ^
24/24 tests passed.
;;; STDOUT ;;)
